--- a/package.json
+++ b/package.json
@@ -1,57 +1,27 @@
 {
-  
   "name": "backend",
-  
   "version": "1.0.0",
-  
   "description": "",
-  
   "main": "app.js",
-  
   "scripts": {
-  
-    
-  "test": "echo \"Error: no test specified\" && exit 1"
-  
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
-  
   "repository": {
-  
-    
-  "type": "git",
-  
-    
-  "url": "git+https://github.com/PeterNnamani/walmartbackend.git"
-  
+    "type": "git",
+    "url": "git+https://github.com/PeterNnamani/walmartbackend.git"
   },
-  
   "keywords": [],
-  
   "author": "",
-  
   "license": "ISC",
-  
   "type": "commonjs",
-  
   "bugs": {
-  
-    
-  "url": "https://github.com/PeterNnamani/walmartbackend/issues"
-  
+    "url": "https://github.com/PeterNnamani/walmartbackend/issues"
   },
-  
   "homepage": "https://github.com/PeterNnamani/walmartbackend#readme",
-  
   "dependencies": {
-  
-    
-  "cors": "^2.8.5",
-  
-    
-  "express": "^5.1.0",
-  
-    
-  "nodemailer": "^7.0.9"
-  
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "nodemailer": "^7.0.9"
   }
 }
