--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node api.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,10 @@
   "homepage": "https://github.com/PeterNnamani/walmartbackend#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "nodemailer": "^7.0.9"
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.15"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
