--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.15",
-    "@sendgrid/mail": "^7.7.0"
+    "nodemailer": "^6.9.15"
   },
   "engines": {
     "node": ">=18.x"
